@@ -55,83 +55,83 @@ ham_dump(ham_db_t *db, void *reserved, ham_dump_cb_t cb);
 HAM_EXPORT ham_status_t
 ham_check_integrity(ham_db_t *db, void *reserved);
 
-struct ham_page_filter_t;
-typedef struct ham_page_filter_t ham_page_filter_t;
+struct ham_file_filter_t;
+typedef struct ham_file_filter_t ham_file_filter_t;
 
 /**
  * A callback function for a page-level filter; called before the 
  * page is written to disk
  */
-typedef ham_status_t (*ham_page_filter_pre_cb_t)(ham_db_t *db, 
-        ham_page_filter_t *filter, ham_u8_t *page_data, ham_size_t page_size);
+typedef ham_status_t (*ham_file_filter_before_write_cb_t)(ham_db_t *db, 
+        ham_file_filter_t *filter, ham_u8_t *file_data, ham_size_t file_size);
 
 /**
  * A callback function for a page-level filter; called immediately after the 
  * page is read from disk
  */
-typedef ham_status_t (*ham_page_filter_post_cb_t)(ham_db_t *db, 
-        ham_page_filter_t *filter, ham_u8_t *page_data, ham_size_t page_size);
+typedef ham_status_t (*ham_file_filter_after_read_cb_t)(ham_db_t *db, 
+        ham_file_filter_t *filter, ham_u8_t *file_data, ham_size_t file_size);
 
 /**
  * A callback function for a page-level filter; called immediately before the
  * database is closed. Can be used to avoid memory leaks.
  */
-typedef void (*ham_page_filter_close_cb_t)(ham_db_t *db, 
-        ham_page_filter_t *filter);
+typedef void (*ham_file_filter_close_cb_t)(ham_db_t *db, 
+        ham_file_filter_t *filter);
 
 /**
  * A handle for page-level filtering.
  *
- * Page-level filters can modify the page data before the page is 
+ * File-level filters can modify the page data before some data is 
  * written to disk, and immediately after it's read from disk.
  *
- * Page-level filters can be used i.e. for writing encryption filters. 
- * See @a ham_add_encryption() to create a filter for AES-based encryption.
+ * File-level filters can be used i.e. for writing encryption filters. 
+ * See @a ham_enable_encryption() to create a filter for AES-based encryption.
  *
  * Each of the three callback functions can be NULL.
  *
  * Before this structure is used, it has to be initialized with zeroes.
  */
-struct ham_page_filter_t
+struct ham_file_filter_t
 {
     /** The user data */
     void *userdata;
 
     /** The function which is called before the page is written */
-    ham_page_filter_pre_cb_t pre_cb;
+    ham_file_filter_before_write_cb_t before_write_cb;
 
     /** The function which is called after the page is read */
-    ham_page_filter_post_cb_t post_cb;
+    ham_file_filter_after_read_cb_t after_read_cb;
 
     /** The function which is when the database is closed */
-    ham_page_filter_close_cb_t close_cb;
+    ham_file_filter_close_cb_t close_cb;
 
     /** For internal use */
     ham_u32_t _flags;
 
     /** For internal use */
-    ham_page_filter_t *_next, *_prev;
+    ham_file_filter_t *_next, *_prev;
 
 };
 
 /**
- * A function to install a page-level filter. 
+ * A function to install a file-level filter. 
  *
- * Page-level filters are usually installed immediately after the database
+ * File-level filters are usually installed immediately after the database
  * is created with @a ham_create[_ex] or opened with @a ham_open[_ex].
  */
 HAM_EXPORT ham_status_t
-ham_add_page_filter(ham_db_t *db, ham_page_filter_t *filter);
+ham_add_file_filter(ham_db_t *db, ham_file_filter_t *filter);
 
 /**
- * A function to remove a page-level filter.
+ * A function to remove a file-level filter.
  *
- * This function is usually not necessary - the lifetime of a page-filter
+ * This function is usually not necessary - the lifetime of a file-filter
  * usually starts before the first database operation, and ends when the
  * database is closed. It is not recommended to use this function.
  */
 HAM_EXPORT ham_status_t
-ham_remove_page_filter(ham_db_t *db, ham_page_filter_t *filter);
+ham_remove_file_filter(ham_db_t *db, ham_file_filter_t *filter);
 
 
 #ifdef __cplusplus
