@@ -24,7 +24,7 @@ typedef struct simple_filter_t
 } simple_filter_t;
 
 static ham_status_t
-my_pre_cb(ham_db_t *, ham_page_filter_t *filter, ham_u8_t *, ham_size_t)
+my_pre_cb(ham_db_t *, ham_file_filter_t *filter, ham_u8_t *, ham_size_t)
 {
     simple_filter_t *sf=(simple_filter_t *)filter->userdata;
     sf->written++;
@@ -32,7 +32,7 @@ my_pre_cb(ham_db_t *, ham_page_filter_t *filter, ham_u8_t *, ham_size_t)
 }
 
 static ham_status_t
-my_post_cb(ham_db_t *, ham_page_filter_t *filter, ham_u8_t *, ham_size_t)
+my_post_cb(ham_db_t *, ham_file_filter_t *filter, ham_u8_t *, ham_size_t)
 {
     simple_filter_t *sf=(simple_filter_t *)filter->userdata;
     sf->read++;
@@ -40,7 +40,7 @@ my_post_cb(ham_db_t *, ham_page_filter_t *filter, ham_u8_t *, ham_size_t)
 }
 
 static void
-my_close_cb(ham_db_t *, ham_page_filter_t *filter)
+my_close_cb(ham_db_t *, ham_file_filter_t *filter)
 {
     simple_filter_t *sf=(simple_filter_t *)filter->userdata;
     sf->closed++;
@@ -52,6 +52,7 @@ class PageFilterTest : public CppUnit::TestFixture
     CPPUNIT_TEST      (addRemoveTest);
     CPPUNIT_TEST      (simpleFilterTest);
     CPPUNIT_TEST      (aesFilterTest);
+    CPPUNIT_TEST      (aesEnvFilterTest);
     CPPUNIT_TEST_SUITE_END();
 
 protected:
@@ -78,46 +79,46 @@ public:
 
     void addRemoveTest()
     {
-        ham_page_filter_t filter1, filter2, filter3;
+        ham_file_filter_t filter1, filter2, filter3;
         memset(&filter1, 0, sizeof(filter1));
         memset(&filter2, 0, sizeof(filter2));
         memset(&filter3, 0, sizeof(filter3));
 
-        CPPUNIT_ASSERT_EQUAL(0, ham_add_page_filter(m_db, &filter1));
+        CPPUNIT_ASSERT_EQUAL(0, ham_add_file_filter(m_db, &filter1));
         CPPUNIT_ASSERT(filter1._next==0);
         CPPUNIT_ASSERT(filter1._prev==0);
-        CPPUNIT_ASSERT_EQUAL(&filter1, db_get_page_filter(m_db));
+        CPPUNIT_ASSERT_EQUAL(&filter1, db_get_file_filter(m_db));
 
-        CPPUNIT_ASSERT_EQUAL(0, ham_add_page_filter(m_db, &filter2));
+        CPPUNIT_ASSERT_EQUAL(0, ham_add_file_filter(m_db, &filter2));
         CPPUNIT_ASSERT(filter1._next==&filter2);
         CPPUNIT_ASSERT(filter2._prev==&filter1);
         CPPUNIT_ASSERT(filter1._prev==0);
         CPPUNIT_ASSERT(filter2._next==0);
-        CPPUNIT_ASSERT_EQUAL(&filter1, db_get_page_filter(m_db));
+        CPPUNIT_ASSERT_EQUAL(&filter1, db_get_file_filter(m_db));
 
-        CPPUNIT_ASSERT_EQUAL(0, ham_add_page_filter(m_db, &filter3));
+        CPPUNIT_ASSERT_EQUAL(0, ham_add_file_filter(m_db, &filter3));
         CPPUNIT_ASSERT(filter1._next==&filter2);
         CPPUNIT_ASSERT(filter2._prev==&filter1);
         CPPUNIT_ASSERT(filter2._next==&filter3);
         CPPUNIT_ASSERT(filter3._prev==&filter2);
         CPPUNIT_ASSERT(filter1._prev==0);
         CPPUNIT_ASSERT(filter3._next==0);
-        CPPUNIT_ASSERT_EQUAL(&filter1, db_get_page_filter(m_db));
+        CPPUNIT_ASSERT_EQUAL(&filter1, db_get_file_filter(m_db));
 
-        CPPUNIT_ASSERT_EQUAL(0, ham_remove_page_filter(m_db, &filter2));
+        CPPUNIT_ASSERT_EQUAL(0, ham_remove_file_filter(m_db, &filter2));
         CPPUNIT_ASSERT(filter1._next==&filter3);
         CPPUNIT_ASSERT(filter3._prev==&filter1);
         CPPUNIT_ASSERT(filter1._prev==0);
         CPPUNIT_ASSERT(filter3._next==0);
-        CPPUNIT_ASSERT_EQUAL(&filter1, db_get_page_filter(m_db));
+        CPPUNIT_ASSERT_EQUAL(&filter1, db_get_file_filter(m_db));
 
-        CPPUNIT_ASSERT_EQUAL(0, ham_remove_page_filter(m_db, &filter3));
+        CPPUNIT_ASSERT_EQUAL(0, ham_remove_file_filter(m_db, &filter3));
         CPPUNIT_ASSERT(filter1._prev==0);
         CPPUNIT_ASSERT(filter1._next==0);
-        CPPUNIT_ASSERT_EQUAL(&filter1, db_get_page_filter(m_db));
+        CPPUNIT_ASSERT_EQUAL(&filter1, db_get_file_filter(m_db));
 
-        CPPUNIT_ASSERT_EQUAL(0, ham_remove_page_filter(m_db, &filter1));
-        CPPUNIT_ASSERT(0==db_get_page_filter(m_db));
+        CPPUNIT_ASSERT_EQUAL(0, ham_remove_file_filter(m_db, &filter1));
+        CPPUNIT_ASSERT(0==db_get_file_filter(m_db));
 
         CPPUNIT_ASSERT_EQUAL(0, ham_create(m_db, ".test", m_flags, 0644));
         CPPUNIT_ASSERT_EQUAL(0, ham_close(m_db, 0));
@@ -126,15 +127,15 @@ public:
     void simpleFilterTest()
     {
         simple_filter_t sf;
-        ham_page_filter_t filter;
+        ham_file_filter_t filter;
         memset(&filter, 0, sizeof(filter));
         memset(&sf, 0, sizeof(sf));
         filter.userdata=(void *)&sf;
-        filter.pre_cb=my_pre_cb;
-        filter.post_cb=my_post_cb;
+        filter.before_write_cb=my_pre_cb;
+        filter.after_read_cb=my_post_cb;
         filter.close_cb=my_close_cb;
 
-        CPPUNIT_ASSERT_EQUAL(0, ham_add_page_filter(m_db, &filter));
+        CPPUNIT_ASSERT_EQUAL(0, ham_add_file_filter(m_db, &filter));
 
         CPPUNIT_ASSERT_EQUAL(0, ham_create(m_db, ".test", m_flags, 0644));
 
@@ -151,7 +152,7 @@ public:
         CPPUNIT_ASSERT_EQUAL(1, sf.closed);
 
         memset(&sf, 0, sizeof(sf));
-        CPPUNIT_ASSERT_EQUAL(0, ham_add_page_filter(m_db, &filter));
+        CPPUNIT_ASSERT_EQUAL(0, ham_add_file_filter(m_db, &filter));
         CPPUNIT_ASSERT_EQUAL(0, ham_open(m_db, ".test", 0));
         CPPUNIT_ASSERT_EQUAL(0, sf.written);
         CPPUNIT_ASSERT_EQUAL(0, sf.read);
@@ -185,6 +186,53 @@ public:
         CPPUNIT_ASSERT_EQUAL(0, ham_enable_encryption(m_db, aeskey, 0));
         CPPUNIT_ASSERT_EQUAL(0, ham_find(m_db, 0, &key, &rec, 0));
         CPPUNIT_ASSERT_EQUAL(0, ham_close(m_db, 0));
+    }
+
+    void aesEnvFilterTest()
+    {
+        ham_env_t *env;
+        ham_db_t *db[3];
+        ham_key_t key;
+        ham_record_t rec;
+        memset(&key, 0, sizeof(key));
+        memset(&rec, 0, sizeof(rec));
+        ham_u8_t aeskey1[16]={0x13};
+        ham_u8_t aeskey2[16]={0x14};
+
+        key.data=(void *)"123";
+        key.size=strlen("123");
+
+        CPPUNIT_ASSERT_EQUAL(0, ham_env_new(&env));
+        CPPUNIT_ASSERT_EQUAL(0, ham_new(&db[0]));
+        CPPUNIT_ASSERT_EQUAL(0, ham_new(&db[1]));
+        CPPUNIT_ASSERT_EQUAL(0, ham_new(&db[2]));
+
+        CPPUNIT_ASSERT_EQUAL(0, ham_env_create(env, ".test", 0, 0644));
+        CPPUNIT_ASSERT_EQUAL(0, ham_env_create_db(env, db[0], 333, 0, 0));
+        CPPUNIT_ASSERT_EQUAL(0, ham_env_create_db(env, db[1], 334, 0, 0));
+        CPPUNIT_ASSERT_EQUAL(0, ham_env_create_db(env, db[2], 335, 0, 0));
+
+        CPPUNIT_ASSERT_EQUAL(0, ham_enable_encryption(db[0], aeskey1, 0));
+        CPPUNIT_ASSERT_EQUAL(0, ham_enable_encryption(db[1], aeskey2, 0));
+        CPPUNIT_ASSERT_EQUAL(0, ham_insert(db[0], 0, &key, &rec, 0));
+        CPPUNIT_ASSERT_EQUAL(0, ham_insert(db[1], 0, &key, &rec, 0));
+        CPPUNIT_ASSERT_EQUAL(0, ham_insert(db[2], 0, &key, &rec, 0));
+        CPPUNIT_ASSERT_EQUAL(0, ham_close(db[0], 0));
+        CPPUNIT_ASSERT_EQUAL(0, ham_close(db[1], 0));
+        CPPUNIT_ASSERT_EQUAL(0, ham_close(db[2], 0));
+
+        CPPUNIT_ASSERT_EQUAL(0, ham_env_open_db(env, db[0], 333, 0, 0));
+        CPPUNIT_ASSERT_EQUAL(0, ham_env_open_db(env, db[1], 334, 0, 0));
+        CPPUNIT_ASSERT_EQUAL(0, ham_env_open_db(env, db[2], 335, 0, 0));
+        CPPUNIT_ASSERT_EQUAL(0, ham_find(db[0], 0, &key, &rec, 0));
+        CPPUNIT_ASSERT_EQUAL(0, ham_find(db[1], 0, &key, &rec, 0));
+        CPPUNIT_ASSERT_EQUAL(0, ham_find(db[2], 0, &key, &rec, 0));
+
+        CPPUNIT_ASSERT_EQUAL(0, ham_env_close(env, HAM_AUTO_CLEANUP));
+        CPPUNIT_ASSERT_EQUAL(0, ham_env_delete(env));
+        CPPUNIT_ASSERT_EQUAL(0, ham_delete(db[0]));
+        CPPUNIT_ASSERT_EQUAL(0, ham_delete(db[1]));
+        CPPUNIT_ASSERT_EQUAL(0, ham_delete(db[2]));
     }
 
 };
