@@ -1,3 +1,6 @@
+Oct 28, 2007 - chris
+o finished AES encryption; a new function was added: ham_enable_encryption()
+
 Oct 26, 2007 - chris
 o finished the C++ API in include/ham/hamsterdb.hpp and added two new C++
 	samples - db6.cpp and env3.cpp.
